--- a/lcfserver-server/pom.xml
+++ b/lcfserver-server/pom.xml
@@ -31,19 +31,8 @@
          <version>${project.version}</version>
       </dependency>
       <dependency>
-         <groupId>io.swagger.core.v3</groupId>
-         <artifactId>swagger-core</artifactId>
-         <version>2.0.8</version>
-         <type>jar</type>
-      </dependency>
-      <dependency>
-         <groupId>org.bic.ns.lcf</groupId>
-         <artifactId>lcf-schema</artifactId>
-         <version>1.1.0</version>
-      </dependency>
-      <dependency>
          <groupId>${project.groupId}</groupId>
-         <artifactId>lcfserver-model</artifactId>
+         <artifactId>lcfserver-resources-memory</artifactId>
          <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -52,10 +41,33 @@
          <version>${project.version}</version>
          <scope>compile</scope>
       </dependency>
+        <dependency>
+         <groupId>javax.ws.rs</groupId>
+         <artifactId>javax.ws.rs-api</artifactId>
+         <version>2.1.1</version>
+      </dependency>
+
       <dependency>
-         <groupId>${project.groupId}</groupId>
-         <artifactId>lcfserver-resources-memory</artifactId>
-         <version>${project.version}</version>
+         <groupId>io.swagger.core.v3</groupId>
+         <artifactId>swagger-core</artifactId>
+         <version>2.0.8</version>
+         <type>jar</type>
+      </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2</artifactId>
+            <version>${openapi.swagger.version}</version>
+        </dependency>        
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2-servlet-initializer</artifactId>
+            <version>${openapi.swagger.version}</version>
+        </dependency>   
+
+      <dependency>
+         <groupId>org.glassfish.jersey.containers</groupId>
+         <artifactId>jersey-container-jetty-servlet</artifactId>
+         <version>2.28</version>
       </dependency>
       <dependency>
          <groupId>javax.activation</groupId>
@@ -68,71 +80,10 @@
          <version>2.28</version>
       </dependency>
       <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>${java.ee.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-jaxrs2</artifactId>
-            <version>${openapi.swagger.version}</version>
-        </dependency>        
-        <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-jaxrs2-servlet-initializer</artifactId>
-            <version>${openapi.swagger.version}</version>
-        </dependency>   
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-            <version>2.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-core</artifactId>
-            <version>2.3.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.jaxrs</groupId>
-            <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.9.8</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-jetty-http</artifactId>
-            <version>2.28</version>
-        </dependency>    
-        
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
-            <version>9.4.17.v20190418</version>
-        </dependency>        
-        
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>2.28</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-servlet-core</artifactId>
-            <version>2.28</version>
-        </dependency>        
-        
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>9.4.9.v20180320</version>
-        </dependency>        
-        
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>9.4.7.RC0</version>
-        </dependency> 
+         <groupId>org.glassfish.jaxb</groupId>
+         <artifactId>jaxb-core</artifactId>
+         <version>2.3.0</version>
+      </dependency>
    </dependencies>
 
   <build>
